<resources>
    <string name="app_name">MyFirebaseSocialMedia</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registering_user">Registering user...</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="password_length_at_least_6_characters">Password length at least 6 characters</string>
    <string name="autentication_failed">Authentication failed</string>
    <string name="profile">Profile</string>
    <string name="registered">Registered</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="not_have_account_register">Not have account? Register</string>
    <string name="logging_in">Logging in...</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="cancel">Cancel</string>
    <string name="email_sent">Email sent</string>
    <string name="failed_email_sent">Failed email sent</string>
    <string name="sending_email">Sending email</string>
    <string name="failed_google_login">Failed google login</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="edit_cover_photo">Edit cover photo</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_phone">Edit phone</string>
    <string name="choose_action">Choose Action</string>
    <string name="updating_profile_picture">Updating profile picture</string>
    <string name="updating_cover_photo">Updating cover photo</string>
    <string name="updating_name">Updating name</string>
    <string name="updating_phone">Updating phone</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_image">Pick image</string>
    <string name="pick_image_from">Pick Image From</string>
    <string name="please_enable_camera_and_storage_permissions">Please, enable camera and storage permissions</string>
    <string name="please_enable_storage_permissions">Please, enable storage permissions</string>
    <string name="temp_pic">Temp Pic</string>
    <string name="temp_description">Temp Description</string>
    <string name="image">image</string>
    <string name="cover">cover</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="image_updated">Image updated...</string>
    <string name="update">Update</string>
    <string name="enter">Enter</string>
    <string name="please_enter">Please, enter</string>
    <string name="name_updated">Name updated</string>
    <string name="user_name">User Name</string>
    <string name="user_phone">User Phone</string>
    <string name="user_email">User Email</string>
    <string name="search">Search</string>
    <string name="chats">Chats</string>
    <string name="start_typing">Start typing...</string>
    <string name="you_cannot_send_an_empty_message">You cannot send an empty message</string>
    <string name="delivered">Delivered</string>
    <string name="seen">Seen</string>
    <string name="online">Online</string>
    <string name="last_seen">Last seen</string>
    <string name="noOne">NoOne</string>
    <string name="typing">typing...</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_message">Are you sure you want to delete this message?</string>
    <string name="no">No</string>
    <string name="this_message_was_deleted">This message was deleted</string>
    <string name="you_can_delete_only_your_messages">You can delete only your messages</string>
    <string name="new_message">New Message</string>
    <string name="add_post">Add Post</string>
    <string name="add_new_post">Add new post</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="upload">Upload</string>
    <string name="choose_image_from">Choose image from</string>
    <string name="camera_and_storage_permissions_are_necessary">Camera and Storage permissions are necessary</string>
    <string name="storage_permission_is_necessary">Storage Permission is necessary</string>
    <string name="publishing_post">Publishing post...</string>
    <string name="post_added">Post added</string>
    <string name="min33">33 minutes</string>
    <string name="title">Title</string>
    <string name="the_description_of_the_post">The description of the post</string>
    <string name="likes">1.3k Likes</string>
</resources>