<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    android:elevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/uPictureIV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_default_image_black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/uNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/pTimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/min33"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/moreBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_more_black"/>

        </LinearLayout>

        <TextView
            android:id="@+id/pTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/title"/>
        <TextView
            android:id="@+id/pDescriptionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/the_description_of_the_post"
            android:textColor="@color/black"/>
        <ImageView
            android:id="@+id/pImageIV"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/pLikesTV"
            android:text="@string/likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_500"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>